src/parser.c
#include "parser.h"
#include "ast.h"

#include <string.h>

static void parser_on_error(Parser* parser, ProgRange range, const char* format, ...)
{
    if (parser->errors) {
        char buf[MAX_ERROR_LEN];
        size_t size = 0;
        va_list vargs;

        va_start(vargs, format);
        size = vsnprintf(buf, MAX_ERROR_LEN, format, vargs) + 1;
        va_end(vargs);

        error_stream_add(parser->errors, range, buf, size > sizeof(buf) ? sizeof(buf) : size);
    }
}

void parser_init(Parser* parser, Allocator* ast_arena, Allocator* tmp_arena, const char* str, ProgPos pos,
                 ErrorStream* errors, ProgPos** line_pos)
{
    memset(parser, 0, sizeof(Parser));

    parser->ast_arena = ast_arena;
    parser->errors = errors;
    parser->lexer = lexer_create(str, pos, tmp_arena, errors, line_pos);
}

bool next_token(Parser* parser)
{
    parser->ptoken = parser->token;
    parser->token = scan_token(&parser->lexer);

    return parser->token.kind != TKN_EOF;
}

bool is_token_kind(Parser* parser, TokenKind kind)
{
    return (parser->token.kind == kind);
}

static const uint8_t token_kind_props[TKN_KIND_COUNT] = {
    [TKN_QUESTION] = OP_PRECEDENCE_TERNARY,
    [TKN_LOGIC_OR] = OP_PRECEDENCE_OR,
    [TKN_LOGIC_AND] = OP_PRECEDENCE_AND,

    [TKN_EQ] = OP_PRECEDENCE_CMP,
    [TKN_NOTEQ] = OP_PRECEDENCE_CMP,
    [TKN_GT] = OP_PRECEDENCE_CMP,
    [TKN_GTEQ] = OP_PRECEDENCE_CMP,
    [TKN_LT] = OP_PRECEDENCE_CMP,
    [TKN_LTEQ] = OP_PRECEDENCE_CMP,

    [TKN_PLUS] = OP_PRECEDENCE_ADD | OP_PRECEDENCE_UNARY,
    [TKN_MINUS] = OP_PRECEDENCE_ADD | OP_PRECEDENCE_UNARY,
    [TKN_OR] = OP_PRECEDENCE_ADD,
    [TKN_CARET] = OP_PRECEDENCE_ADD | OP_PRECEDENCE_UNARY,

    [TKN_ASTERISK] = OP_PRECEDENCE_MUL | OP_PRECEDENCE_UNARY,
    [TKN_DIV] = OP_PRECEDENCE_MUL,
    [TKN_MOD] = OP_PRECEDENCE_MUL,
    [TKN_DIVMOD] = OP_PRECEDENCE_MUL,
    [TKN_AND] = OP_PRECEDENCE_MUL,
    [TKN_LSHIFT] = OP_PRECEDENCE_MUL,
    [TKN_RSHIFT] = OP_PRECEDENCE_MUL,

    [TKN_NEG] = OP_PRECEDENCE_UNARY,
    [TKN_NOT] = OP_PRECEDENCE_UNARY,

    [TKN_ASSIGN] = OP_ASSIGN,
    [TKN_ADD_ASSIGN] = OP_ASSIGN,
    [TKN_SUB_ASSIGN] = OP_ASSIGN,
    [TKN_MUL_ASSIGN] = OP_ASSIGN,
    [TKN_DIV_ASSIGN] = OP_ASSIGN,
    [TKN_AND_ASSIGN] = OP_ASSIGN,
    [TKN_OR_ASSIGN] = OP_ASSIGN,
    [TKN_XOR_ASSIGN] = OP_ASSIGN,
    [TKN_MOD_ASSIGN] = OP_ASSIGN,
};

bool is_token_prop_kind(Parser* parser, uint8_t props)
{
    TokenKind kind = parser->token.kind;

    return (token_kind_props[kind] & props);
}

bool is_keyword(Parser* parser, Keyword kw)
{
    return (parser->token.kind == TKN_KW) && (parser->token.as_kw.ident->kw == kw);
}

bool match_token(Parser* parser, TokenKind kind)
{
    bool matches = (parser->token.kind == kind);

    if (matches) {
        next_token(parser);
    }

    return matches;
}

bool match_keyword(Parser* parser, Keyword kw)
{
    bool matches = (parser->token.kind == TKN_KW) && (parser->token.as_kw.ident->kw == kw);

    if (matches) {
        next_token(parser);
    }

    return matches;
}

static void parser_unexpected_token(Parser* parser, TokenKind expected_kind, const char* error_prefix)
{
    char tmp[32];

    print_token(&parser->token, tmp, sizeof(tmp));
    parser_on_error(parser, parser->token.range, "%s: wanted token `%s`, but got token `%s`.",
                    error_prefix ? error_prefix : "Unexpected token", token_kind_names[expected_kind], tmp);
}

bool expect_token(Parser* parser, TokenKind kind, const char* error_prefix)
{
    bool matches = (parser->token.kind == kind);

    if (matches)
        next_token(parser);
    else
        parser_unexpected_token(parser, kind, error_prefix);

    return matches;
}

bool expect_keyword(Parser* parser, Keyword kw, const char* error_prefix)
{
    bool matches = (parser->token.kind == TKN_KW) && (parser->token.as_kw.ident->kw == kw);

    if (matches) {
        next_token(parser);
    }
    else {
        char tmp[32];

        print_token(&parser->token, tmp, sizeof(tmp));
        parser_on_error(parser, parser->token.range, "%s : wanted keyword `%s`, but got token `%s`",
                        error_prefix ? error_prefix : "Unexpected token", keyword_names[kw], tmp);
    }

    return matches;
}

bool skip_after_token(Parser* parser, TokenKind kind)
{
    while (!is_token_kind(parser, TKN_EOF) && !is_token_kind(parser, kind)) {
        next_token(parser);
    }

    return match_token(parser, kind);
}

///////////////////////////////
//    Parse type specifiers
//////////////////////////////

// aggregate_field = (TKN_IDENT ':')? type_spec
static AggregateField* parse_aggregate_field(Parser* parser)
{
    ProgPos start = parser->token.range.start;

    Identifier* ident = NULL;
    TypeSpec* typespec = parse_typespec(parser);

    if (!typespec) {
        return NULL;
    }

    // Parsed a typespec, but was actually meant to be the field's name.
    if (match_token(parser, TKN_COLON)) {
        if (typespec->kind != CST_TypeSpecIdent) {
            parser_on_error(parser, typespec->range, "Field name must be a valid alphanumeric identifier.");
            return NULL;
        }

        TypeSpecIdent* t = (TypeSpecIdent*) typespec;

        if (t->ns_ident.num_idents > 1) {
            parser_on_error(parser, typespec->range, "Field name cannot be prefixed by a namespace.");
            return NULL;
        }

        // Save field name identifer.
        IdentNode* inode = list_entry(t->ns_ident.idents.prev, IdentNode, lnode);
        ident = inode->ident;
        mem_free(parser->ast_arena, typespec); // Free memory.

        typespec = parse_typespec(parser); // Re-parse typespec.

        if (!typespec) {
            return NULL;
        }
    }

    ProgRange range = {.start = start, .end = parser->ptoken.range.end};

    return new_aggregate_field(parser->ast_arena, ident, typespec, range);
}

// aggregate_body  = '{' aggregate_fields+ '}'
// aggregate_fields = aggregate_field (';' aggregate_field)* ';'?
static bool parse_fill_aggregate_body(Parser* parser, List* fields)
{
    list_head_init(fields);

    while (!is_token_kind(parser, TKN_RBRACE) && !is_token_kind(parser, TKN_EOF)) {
        AggregateField* field = parse_aggregate_field(parser);

        if (!field)
            return false;

        list_add_last(fields, &field->lnode);

        if (!match_token(parser, TKN_SEMICOLON)) {
            break;
        }
    }

    return true;
}

static TypeSpec* parse_typespec_aggregate(Parser* parser, const char* error_prefix,
                                          NewTypeSpecAggregateProc* new_typespec_aggregate)
{
    assert(is_keyword(parser, KW_STRUCT) || is_keyword(parser, KW_UNION));
    ProgRange range = {.start = parser->token.range.start};

    next_token(parser);

    if (!expect_token(parser, TKN_LBRACE, error_prefix)) {
        return NULL;
    }

    List fields = {0};

    if (!parse_fill_aggregate_body(parser, &fields) || !expect_token(parser, TKN_RBRACE, error_prefix)) {
        return NULL;
    }

    range.end = parser->ptoken.range.end;

    if (list_empty(&fields)) {
        parser_on_error(parser, range, "%s: must have at least one field", error_prefix);
        return NULL;
    }

    return new_typespec_aggregate(parser->ast_arena, &fields, range);
}

// typespec_proc_param = (name ':')? typespec
static ProcParam* parse_typespec_proc_param(Parser* parser, bool* is_variadic)
{
    const char* error_prefix = "Failed to parse procedure type";
    ProcParam* param = NULL;

    // Parse variadic parameter type without a name. EX: .. typespec
    if (match_token(parser, TKN_ELLIPSIS)) {
        if (*is_variadic) {
            parser_on_error(parser, parser->ptoken.range, "%s: can only specify one variadic parameter", error_prefix);
            return NULL;
        }

        *is_variadic = true;

        TypeSpec* typespec = parse_typespec(parser);

        if (match_token(parser, TKN_COLON)) {
            parser_on_error(parser, parser->ptoken.range, "%s: `..` must appear before parameter type", error_prefix);
            return NULL;
        }

        param = new_proc_param(parser->ast_arena, NULL, typespec, *is_variadic, typespec->range);
    }
    else {
        TypeSpec* typespec = parse_typespec(parser);

        if (!typespec) {
            return NULL;
        }

        // Parse a potentially variadic parameter type with a name. EX: `x : int` or `x : ..int`.
        if (match_token(parser, TKN_COLON)) {
            if (typespec->kind != CST_TypeSpecIdent) {
                parser_on_error(parser, typespec->range, "Parameter's name must be an alphanumeric identifier");
                return NULL;
            }

            ProgPos start = typespec->range.start;
            TypeSpecIdent* tident = (TypeSpecIdent*)typespec;

            if (tident->ns_ident.num_idents > 1) {
                parser_on_error(parser, typespec->range, "Parameter name cannot be prefixed by a namespace.");
                return NULL;
            }

            IdentNode* inode = list_entry(tident->ns_ident.idents.prev, IdentNode, lnode);
            Identifier* name = inode->ident;

            mem_free(parser->ast_arena, typespec);

            if (match_token(parser, TKN_ELLIPSIS)) {
                if (*is_variadic) {
                    ProgRange err_range = {.start = start, .end = parser->token.range.end};
                    parser_on_error(parser, err_range, "%s: can only specify one variadic parameter", error_prefix);
                    return NULL;
                }

                *is_variadic = true;
            }
            else if (*is_variadic) {
                ProgRange err_range = {.start = start, .end = parser->token.range.end};
                parser_on_error(parser, err_range, "%s: variadic parameter must appear last in the parameter list", error_prefix);
                return NULL;
            }

            typespec = parse_typespec(parser);

            if (!typespec) {
                return NULL;
            }

            ProgRange range =  {.start = start, .end = typespec->range.end};
            param = new_proc_param(parser->ast_arena, name, typespec, *is_variadic, range);
        }
        // Parameter type does not have a name and is not variadic.
        else {
            param = new_proc_param(parser->ast_arena, NULL, typespec, false, typespec->range);
        }
    }

    return param;
}

// typespec_proc = 'proc' '(' proc_param_list? ')' ('=>' typespec)?
//
// proc_param_list = typespec_proc_param (',' typespec_proc_param)*
static TypeSpec* parse_typespec_proc(Parser* parser)
{
    assert(is_keyword(parser, KW_PROC));
    ProgRange range = {.start = parser->token.range.start};
    const char* error_prefix = "Failed to parse procedure type specification";

    next_token(parser);

    if (!expect_token(parser, TKN_LPAREN, error_prefix)) {
        return NULL;
    }

    size_t num_params = 0;
    List params = list_head_create(params);
    bool is_variadic = false;

    while (!is_token_kind(parser, TKN_RPAREN) && !is_token_kind(parser, TKN_EOF)) {
        ProcParam* param = parse_typespec_proc_param(parser, &is_variadic);

        if (!param) {
            return NULL;
        }

        num_params += 1;
        list_add_last(&params, &param->lnode);

        if (!match_token(parser, TKN_COMMA))
            break;
    }

    if (!expect_token(parser, TKN_RPAREN, error_prefix)) {
        return NULL;
    }

    TypeSpec* ret = NULL;

    if (match_token(parser, TKN_ARROW)) {
        ret = parse_typespec(parser);

        if (!ret) {
            return NULL;
        }
    }

    range.end = parser->ptoken.range.end;
    return new_typespec_proc(parser->ast_arena, num_params, &params, ret, is_variadic, range);
}

// namespaced_ident = (TKN_IDENT '::')* TKN_IDENT
static bool parse_namespaced_ident(Parser* parser, NSIdent* ns_ident, const char* err_prefix)
{
    ns_ident->range = parser->token.range;
    ns_ident->num_idents = 0;
    list_head_init(&ns_ident->idents);

    // Keep parsing identifiers as long as we see a `::` token.
    do {
        if (!expect_token(parser, TKN_IDENT, err_prefix)) {
            return false;
        }

        Token* ptoken = &parser->ptoken;

        IdentNode* inode = alloc_type(parser->ast_arena, IdentNode, true);
        inode->ident = ptoken->as_ident.ident;

        list_add_last(&ns_ident->idents, &inode->lnode);
        ns_ident->num_idents += 1;
        ns_ident->range.end = ptoken->range.end;
    } while (match_token(parser, TKN_DBL_COLON));

    return true;
}

// typespec_ident = namespaced_ident
static TypeSpec* parse_typespec_ident(Parser* parser)
{
    NSIdent ns_ident = {0};

    if (!parse_namespaced_ident(parser, &ns_ident, "Failed to parse typespec identifier")) {
        return NULL;
    }

    return new_typespec_ident(parser->ast_arena, &ns_ident);
}

static TypeSpec* parse_typespec_typeof(Parser* parser)
{
    assert(is_keyword(parser, KW_TYPEOF));
    ProgRange range = {.start = parser->token.range.start};
    const char* error_prefix = "Failed to parse typeof expression";

    next_token(parser);

    if (!expect_token(parser, TKN_LPAREN, error_prefix)) {
        return NULL;
    }

    Expr* arg = parse_expr(parser);

    if (!arg) {
        return NULL;
    }

    if (!expect_token(parser, TKN_RPAREN, error_prefix)) {
        return NULL;
    }

    range.end = parser->ptoken.range.end;

    return new_typespec_typeof(parser->ast_arena, arg, range);
}

// typespec_base  = typespec_proc
//                | typespec_anon_struct
//                | typespec_anon_union
//                | typespec_typeof
//                | typespec_ident
//                | '(' type_spec ')'
static TypeSpec* parse_typespec_base(Parser* parser)
{
    Token token = parser->token;

    switch (token.kind) {
    case TKN_KW: {
        switch (token.as_kw.ident->kw) {
        case KW_PROC:
            return parse_typespec_proc(parser);
        case KW_STRUCT:
            return parse_typespec_aggregate(parser, "Failed to parse anonymous struct", new_typespec_struct);
        case KW_UNION:
            return parse_typespec_aggregate(parser, "Failed to parse anonymous union", new_typespec_union);
        case KW_TYPEOF:
            return parse_typespec_typeof(parser);
        default:
            break;
        }
    } break;
    case TKN_IDENT:
        return parse_typespec_ident(parser);
    case TKN_LPAREN: {
        next_token(parser);

        TypeSpec* typespec = NULL;
        TypeSpec* enclosed_typespec = parse_typespec(parser);

        if (enclosed_typespec && expect_token(parser, TKN_RPAREN, NULL)) {
            typespec = enclosed_typespec;
        }

        return typespec;
    } break;
    default:
        break;
    }

    // If we got here, we have an unexpected token.
    char tmp[32];

    print_token(&token, tmp, sizeof(tmp));
    parser_on_error(parser, token.range, "Unexpected token `%s` in type specification", tmp);

    return NULL;
}

TypeSpec* parse_array_typespec(Parser* parser)
{
    const char* err_prefix = "Failed to parse array type specification";
    ProgRange range = {.start = parser->token.range.start};

    if (!expect_token(parser, TKN_LBRACKET, err_prefix)) {
        return NULL;
    }

    Expr* len = NULL;
    bool infer_len = false;

    if (match_keyword(parser, KW_UNDERSCORE)) {
        infer_len = true;
    }
    else if (!is_token_kind(parser, TKN_RBRACKET)) {
        len = parse_expr(parser);

        if (!len) {
            return NULL;
        }
    }

    if (!expect_token(parser, TKN_RBRACKET, err_prefix)) {
        return NULL;
    }

    TypeSpec* base = parse_typespec(parser);

    if (!base) {
        return NULL;
    }

    range.end = base->range.end;

    assert((len && !infer_len) || !len); // TODO: Remove

    return new_typespec_array(parser->ast_arena, base, len, infer_len, range);
}

// typespec = ('^' | '[' expr? ']' | KW_CONST) typespec
//          | typespec_base
TypeSpec* parse_typespec(Parser* parser)
{
    TypeSpec* typespec = NULL;

    if (match_token(parser, TKN_CARET)) {
        //
        // Pointer typespec.
        //

        ProgRange range = {.start = parser->ptoken.range.start};
        TypeSpec* base = parse_typespec(parser);

        if (base) {
            range.end = base->range.end;
            typespec = new_typespec_ptr(parser->ast_arena, base, range);
        }
    }
    else if (is_token_kind(parser, TKN_LBRACKET)) {
        //
        // Array typespec.
        //
        typespec = parse_array_typespec(parser);
    }
    else if (match_keyword(parser, KW_CONST)) {
        //
        // Const typespec
        //

        ProgRange range = {.start = parser->ptoken.range.start};
        TypeSpec* base = parse_typespec(parser);

        if (base) {
            range.end = base->range.end;
            typespec = new_typespec_const(parser->ast_arena, base, range);
        }
    }
    else {
        typespec = parse_typespec_base(parser);
    }

    return typespec;
}

///////////////////////////////
//    Parse expressions
//////////////////////////////

static Expr* parse_expr_unary(Parser* parser);

static MemberInitializer* parse_nonindex_member_initializer(Parser* parser)
{
    ProgPos start = parser->token.range.start;
    Designator designator = {0};

    // Try to parse the expression (assuming that it is not named).
    Expr* expr = parse_expr(parser);

    if (!expr) {
        return NULL;
    }

    // If we find a `=` token, then we mistakenly parsed a name as an expression.
    if (match_token(parser, TKN_ASSIGN)) {
        if (expr->kind != CST_ExprIdent) {
            parser_on_error(parser, expr->range, "Initializer designator name must be alphanumeric");
            return NULL;
        }

        ExprIdent* e = (ExprIdent*)expr;

        if (e->ns_ident.num_idents > 1) {
            parser_on_error(parser, expr->range, "Initializer designator name cannot be prefixed by a namespace.");
            return NULL;
        }

        // Save initializer name.
        IdentNode* inode = list_entry(e->ns_ident.idents.prev, IdentNode, lnode);
        designator.kind = DESIGNATOR_NAME;
        designator.name = inode->ident;

        // Free memory.
        mem_free(parser->ast_arena, expr);

        // Re-parse expression.
        expr = parse_expr(parser);

        if (!expr) {
            return NULL;
        }
    }

    ProgRange range = {.start = start, .end = expr->range.end};

    return new_member_initializer(parser->ast_arena, expr, designator, range);
}

static MemberInitializer* parse_index_member_initializer(Parser* parser)
{
    const char* err_prefix = "Failed to parse indexed initializer expression";
    ProgRange range = {.start = parser->token.range.start};
    Designator designator = {.kind = DESIGNATOR_INDEX};

    if (!expect_token(parser, TKN_LBRACKET, err_prefix)) {
        return NULL;
    }

    Expr* index = parse_expr(parser);

    if (!index) {
        return NULL;
    }

    if (!expect_token(parser, TKN_RBRACKET, err_prefix) ||
        !expect_token(parser, TKN_ASSIGN, err_prefix)) {
        return NULL;
    }

    Expr* init = parse_expr(parser);

    if (!init) {
        return NULL;
    }

    range.end = init->range.end;
    designator.index = index;

    return new_member_initializer(parser->ast_arena, init, designator, range);
}

static MemberInitializer* parse_member_initializer(Parser* parser)
{
    if (is_token_kind(parser, TKN_LBRACKET)) {
        return parse_index_member_initializer(parser);
    }

    return parse_nonindex_member_initializer(parser);
}

// expr_compound_lit = '{' expr_init_list (':' typespec)? '}'
// expr_init_list = expr_init_item (',' expr_init_item)*
// expr_init_item = (TKN_IDENT '=')? expr
//               | ('[' (TKN_INT | TKN_IDENT) ']' '=')? expr
static Expr* parse_expr_compound_lit(Parser* parser)
{
    Expr* expr = NULL;
    const char* error_prefix = "Failed to parse compound literal expression";

    if (expect_token(parser, TKN_LBRACE, error_prefix)) {
        ProgRange range = {.start = parser->ptoken.range.start};
        size_t num_initzers = 0;
        List initzers = list_head_create(initzers);
        bool bad_initzer = false;

        while (!is_token_kind(parser, TKN_RBRACE) && !is_token_kind(parser, TKN_COLON) &&
               !is_token_kind(parser, TKN_EOF)) {
            MemberInitializer* initzer = parse_member_initializer(parser);

            if (initzer) {
                num_initzers += 1;
                list_add_last(&initzers, &initzer->lnode);
            }
            else {
                bad_initzer = true;
                break;
            }

            if (!match_token(parser, TKN_COMMA))
                break;
        }

        if (!bad_initzer) {
            TypeSpec* typespec = NULL;

            if (match_token(parser, TKN_COLON)) {
                typespec = parse_typespec(parser);

                if (typespec && expect_token(parser, TKN_RBRACE, error_prefix)) {
                    range.end = parser->ptoken.range.end;
                    expr = new_expr_compound_lit(parser->ast_arena, typespec, num_initzers, &initzers, range);
                }
            }
            else if (expect_token(parser, TKN_RBRACE, error_prefix)) {
                range.end = parser->ptoken.range.end;
                expr = new_expr_compound_lit(parser->ast_arena, typespec, num_initzers, &initzers, range);
            }
        }
    }

    return expr;
}

static Expr* parse_expr_sizeof(Parser* parser)
{
    assert(is_keyword(parser, KW_SIZEOF));
    Expr* expr = NULL;
    ProgRange range = {.start = parser->token.range.start};
    const char* error_prefix = "Failed to parse #sizeof expression";

    next_token(parser);

    if (expect_token(parser, TKN_LPAREN, error_prefix)) {
        TypeSpec* typespec = parse_typespec(parser);

        if (typespec && expect_token(parser, TKN_RPAREN, error_prefix)) {
            range.end = parser->ptoken.range.end;
            expr = new_expr_sizeof(parser->ast_arena, typespec, range);
        }
    }

    return expr;
}

static Expr* parse_expr_typeid(Parser* parser)
{
    assert(is_keyword(parser, KW_TYPEID));
    Expr* expr = NULL;
    ProgRange range = {.start = parser->token.range.start};
    const char* error_prefix = "Failed to parse #typeid expression";

    next_token(parser);

    if (expect_token(parser, TKN_LPAREN, error_prefix)) {
        TypeSpec* typespec = parse_typespec(parser);

        if (typespec && expect_token(parser, TKN_RPAREN, error_prefix)) {
            range.end = parser->ptoken.range.end;
            expr = new_expr_typeid(parser->ast_arena, typespec, range);
        }
    }

    return expr;
}

static Expr* parse_expr_offsetof(Parser* parser)
{
    assert(is_keyword(parser, KW_OFFSETOF));
    ProgPos start = parser->token.range.start;

    const char* err_prefix = "Failed to parse #offsetof expression";

    next_token(parser);

    if (!expect_token(parser, TKN_LPAREN, err_prefix)) {
        return NULL;
    }

    TypeSpec* obj_ts = parse_typespec(parser);

    if (!obj_ts) {
        return NULL;
    }

    if (!expect_token(parser, TKN_COMMA, err_prefix)) {
        return NULL;
    }

    if (!expect_token(parser, TKN_IDENT, err_prefix)) {
        return NULL;
    }

    Identifier* field_ident = parser->ptoken.as_ident.ident;

    if (!expect_token(parser, TKN_RPAREN, err_prefix)) {
        return NULL;
    }

    ProgRange range = {.start = start, .end = parser->ptoken.range.end};

    return new_expr_offsetof(parser->ast_arena, obj_ts, field_ident, range);
}

static Expr* parse_expr_indexof(Parser* parser)
{
    assert(is_keyword(parser, KW_INDEXOF));
    ProgPos start = parser->token.range.start;
    const char* err_prefix = "Failed to parse #indexof expression";

    next_token(parser);

    if (!expect_token(parser, TKN_LPAREN, err_prefix)) {
        return NULL;
    }

    TypeSpec* obj_ts = parse_typespec(parser);

    if (!obj_ts) {
        return NULL;
    }

    if (!expect_token(parser, TKN_COMMA, err_prefix)) {
        return NULL;
    }

    if (!expect_token(parser, TKN_IDENT, err_prefix)) {
        return NULL;
    }

    Identifier* field_ident = parser->ptoken.as_ident.ident;

    if (!expect_token(parser, TKN_RPAREN, err_prefix)) {
        return NULL;
    }

    ProgRange range = {.start = start, .end = parser->ptoken.range.end};

    return new_expr_indexof(parser->ast_arena, obj_ts, field_ident, range);
}

static Expr* parse_expr_len(Parser* parser)
{
    assert(is_keyword(parser, KW_LENGTH));
    ProgPos start = parser->token.range.start;
    const char* err_prefix = "Failed to parse #len expression";

    next_token(parser);

    if (!expect_token(parser, TKN_LPAREN, err_prefix)) {
        return NULL;
    }

    Expr* arg = parse_expr(parser);

    if (!arg) {
        return NULL;
    }

    if (!expect_token(parser, TKN_RPAREN, err_prefix)) {
        return NULL;
    }

    ProgRange range = {.start = start, .end = parser->ptoken.range.end};

    return new_expr_length(parser->ast_arena, arg, range);
}

// expr_ident = namespaced_ident
static Expr* parse_expr_ident(Parser* parser)
{
    NSIdent ns_ident = {0};

    if (!parse_namespaced_ident(parser, &ns_ident, "Failed to parse expression identifier")) {
        return NULL;
    }

    return new_expr_ident(parser->ast_arena, &ns_ident);
}

// expr_base = TKN_INT
//           | TKN_FLOAT
//           | TKN_STR
//           | expr_ident
//           | expr_compound_init
//           | expr_sizeof
//           | expr_typeid
//           | expr_offsetof
//           | expr_indexof
//           | expr_len
//           | '(' expr ')'
//
// expr_sizeof = KW_SIZEOF '('type_spec')'
static Expr* parse_expr_base(Parser* parser)
{
    Token token = parser->token;

    switch (token.kind) {
    case TKN_INT:
        next_token(parser);
        return new_expr_int(parser->ast_arena, token.as_int, token.range);
    case TKN_FLOAT:
        next_token(parser);
        return new_expr_float(parser->ast_arena, token.as_float.kind, token.as_float.value, token.range);
    case TKN_STR:
        next_token(parser);
        return new_expr_str(parser->ast_arena, token.as_str.str_lit, token.range);
    case TKN_LPAREN: {
        next_token(parser);

        Expr* enclosed = parse_expr(parser);

        if (!enclosed || !expect_token(parser, TKN_RPAREN, NULL)) {
            return NULL;
        }

        enclosed->range.start = token.range.start;
        enclosed->range.end = parser->token.range.end;
        return enclosed;
    } break;
    case TKN_LBRACE:
        return parse_expr_compound_lit(parser);
    case TKN_KW: {
        switch (token.as_kw.ident->kw) {
        case KW_SIZEOF:
            return parse_expr_sizeof(parser);
        case KW_TYPEID:
            return parse_expr_typeid(parser);
        case KW_OFFSETOF:
            return parse_expr_offsetof(parser);
        case KW_INDEXOF:
            return parse_expr_indexof(parser);
        case KW_LENGTH:
            return parse_expr_len(parser);
        default:
            break;
        }
    } break;
    case TKN_IDENT: {
        return parse_expr_ident(parser);
    }
    default:
        break;
    }

    // If we got here, we have an unexpected token.
    char tmp[32];

    print_token(&token, tmp, sizeof(tmp));
    parser_on_error(parser, token.range, "Unexpected token `%s` in expression", tmp);

    return NULL;
}

// proc_call_arg = (IDENTIFIER '=')? expr
static ProcCallArg* parse_proc_call_arg(Parser* parser)
{
    Identifier* name = NULL;
    Expr* expr = parse_expr(parser);

    if (!expr) {
        return NULL;
    }

    if (match_token(parser, TKN_ASSIGN)) {
        if (expr->kind != CST_ExprIdent) {
            parser_on_error(parser, expr->range, "Procedure argument's name must be an alphanumeric identifier");
            return NULL;
        }

        ExprIdent* e = (ExprIdent*)expr;

        if (e->ns_ident.num_idents > 1) {
            parser_on_error(parser, expr->range, "Argument name cannot be prefixed by a namespace.");
            return NULL;
        }

        IdentNode* inode = list_entry(e->ns_ident.idents.prev, IdentNode, lnode);
        name = inode->ident;
        mem_free(parser->ast_arena, expr);

        expr = parse_expr(parser);

        if (!expr) {
            return NULL;
        }
    }

    return new_proc_call_arg(parser->ast_arena, expr, name);
}

// expr_base_mod = expr_base ('.' ('[' expr ']' | TKN_IDENT) | '[' expr ']' | '(' proc_call_arg_list* ')' | ':>' typespec)*
// proc_call_arg_list = proc_call_arg (',' proc_call_arg)*
static Expr* parse_expr_base_mod(Parser* parser)
{
    Expr* expr = parse_expr_base(parser);

    while (expr && (is_token_kind(parser, TKN_DOT) || is_token_kind(parser, TKN_LBRACKET) ||
                    is_token_kind(parser, TKN_LPAREN) || is_token_kind(parser, TKN_CAST))) {
        if (match_token(parser, TKN_DOT)) {
            //
            // Struct object field access.
            //

            // Indexed field.
            if (match_token(parser, TKN_LBRACKET)) {
                Expr* index = parse_expr(parser);

                if (index && expect_token(parser, TKN_RBRACKET, "Failed to parse indexed field access")) {
                    ProgRange range = {.start = expr->range.start, .end = parser->ptoken.range.end};
                    expr = new_expr_field_index(parser->ast_arena, expr, index, range);
                }
                else {
                    expr = NULL;
                }
            }
            // Named field.
            else if (expect_token(parser, TKN_IDENT, "Failed to parse field access")) {
                Identifier* field = parser->ptoken.as_ident.ident;
                ProgRange range = {.start = expr->range.start, .end = parser->ptoken.range.end};
                expr = new_expr_field(parser->ast_arena, expr, field, range);
            }
            else {
                expr = NULL;
            }
        }
        else if (match_token(parser, TKN_LBRACKET)) {
            //
            // Array index access.
            //
